Fix some bad spacing in paragraphs

--- a/styles/BlogPostTitleSection.css
+++ b/styles/BlogPostTitleSection.css
@@ -1,7 +1,7 @@
 .post-title-section {
   width: 100%;
   justify-content: start;
-  margin-bottom: 3em;
+  margin-bottom: 1.5em;
 }
 
 .post-title-section .post-title {
