--- a/styles/HorizontalContainer.css
+++ b/styles/HorizontalContainer.css
@@ -10,19 +10,26 @@
   width: 50%;
 }
 
+.top-border > .hz-container-inner-wrapper {
+  height: 250px;
+  margin-top: -25px;
+}
+
 /* XS devices (normal phones, 300px and up) */
 @media only screen and (min-width: 300px) {
-  .hz-container { padding: 0.2em 1em; }
+  .hz-container { padding: 0.2em 2em; }
   .hz-container-inner-wrapper { width: 100%; }
 }
 
 /* S devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  .hz-container { padding: 0.2em 3em; }
   .hz-container-inner-wrapper { width: 100%; }
 }
 
 /* M devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .hz-container { padding: 0.2em 5em; }
   .hz-container-inner-wrapper { width: 100%; }
 }
 
